Scrape play data separately; small improvements